Fixing problems with spacing for JUV page

--- a/css/monica-lin.css
+++ b/css/monica-lin.css
@@ -1416,7 +1416,11 @@
 }
 
 .div-block-82 {
-  margin-top: 15px;
+  margin-top: 50px;
+}
+
+.juv {
+  margin-bottom: 20px;
 }
 
 .columns-9 {
